--- a/AngularCrud/src/app/Second-Page.html
+++ b/AngularCrud/src/app/Second-Page.html
@@ -3,7 +3,7 @@
     <body>
         <div>
             Select Department :
-            <select >
+            <select>
               <option *ngFor=" let department of departments" value ="{{department.Id}}">{{department.Name}} </option>
                 
             </select>
@@ -26,6 +26,7 @@
     </tr>
     </tbody>
 </table>
+{{errorMsg}}
 </div>
 
 <div>Add Two Number Program.</div>
